ENH: remove useless signals BUG: on ubuntu, T spinbox increment bug is a QT issue (#QTBUG-14259)